--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<link rel="icon" href="css/img/favicon.ico">
 	<link rel="stylesheet" href="css/page.css">
 	<link rel="stylesheet" href="css/paripassu.css">
-
-	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
+	
+	<!-- <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+ -->
 	<script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.14.1/build/ol.js"></script>
 	<link rel="stylesheet"
 		href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.14.1/css/ol.css">
@@ -20,17 +20,16 @@
 	<!-- <script  src="js/vector.js"></script> -->
 	<!-- <script  src="js/vendor/ol.js"></script> -->
 	<!-- <script  src="js/vendor/jquery-ajax.js"></script> -->
-	<script src="js/vendor/simplex-noise.js"></script>
-	<script src="js/vendor/uuidv4.min.js"></script>
-	<script src="js/vendor/vue3.global.js"></script>
-	<script src="js/vendor/simple-peer-wrapper.js"></script>
-	<script src="js/vendor/vue.js"></script>
-	<script src="js/map.js"></script>
-	<script src="js/paripassu.js"></script>
-	<script src="js/v-eventlog.js"></script>
-	<script src="js/v-widgets.js"></script>
-
-	<script src="js/pokemon-app.js"></script>
+	<script  src="js/vendor/simplex-noise.js"></script>
+	<script  src="js/vendor/uuidv4.min.js"></script>
+	<!-- <script  src="js/vendor/simple-peer-wrapper.js"></script> -->
+	<script  src="js/vendor/vue.js"></script>
+	<script  src="js/map.js" ></script>
+	<script  src="js/paripassu.js" ></script>
+	<!-- <script  src="js/v-eventlog.js" ></script> -->
+	<script  src="js/v-widgets.js" ></script>
+	
+	<script  src="js/pokemon-app.js" ></script>
 	<!-- <script  src="js/app.js" ></script> -->
 
 </head>
