--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<!-- <script  src="js/v-eventlog.js" ></script> -->
 	<script src="js/v-widgets.js"></script>
 
-	<script src="js/pokemon-app.js"></script>
+	<!-- <script src="js/pokemon-app.js"></script> -->
 	<!-- <script  src="js/app.js" ></script> -->
 
 </head>
@@ -38,6 +38,10 @@
 	<div id="app">
 
 	</div>
+
+	<form class="form-inline">
+		<input class="form-control mr-2 mb-2 mt-2" type="button" value="Undo" id="undo">
+	</form>
 
 
 
@@ -63,6 +67,7 @@
 
 
 	</script>
+	<script src="js/pokemon-app.js"></script>
 
 </body>
 
